Paste complete video path

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div id="main">
         <video class="vid" autoplay loop muted>
-            <source src="videos/_Eagle.mp4" type="video/mp4">
+            <source src="/Users/justin/Desktop/JSPro/Government_Spending/videos/_Eagle.mp4" type="video/mp4">
         </video>
         <div class="main-content">
             <div class="header">
