--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
                         <div class="header-right">Find me at the Australian at 11am on the 3rd Thursday of every month</div>
                     </div>
         <div class="docScroller">
-            <div class="page">
+            <div class="page" id="page1">
                 <video class="vid" autoplay loop muted>
                     <source src="videos/_Eagle.mp4" type="video/mp4">
                     <source src="https://seedie.s3.amazonaws.com/_Eagle.mp4" type="video/mp4">
                 </video>
                 <div class="main-content">
-                    <button class="scroll-buttons" onclick="scrollIt('#page2')">Click Me to Smooth Scroll</button>
+                    <button class="scroll-buttons" onclick="scrollIt('#page2')"></button>
                     <div class="left-right-container">
                         <div class="left">
                             <div id="left-section-1">
@@ -49,8 +49,8 @@
 
             <div class="page" id="page2">
                 <div class="main-content">
-                    <button class="left-scroll-buttons" onclick="scrollIt('#page2')">Click Me to Smooth Scroll</button>
-                    <button class="scroll-buttons" onclick="scrollIt('#page3')">Click Me to Smooth Scroll</button>
+                    <button class="left-scroll-buttons" onclick="scrollIt('#page1')"></button>
+                    <button class="scroll-buttons" onclick="scrollIt('#page3')"></button>
                     <div class="radar-container">
                         <div id="radar-controls">
                             <button class="compare-button" onclick="clicked()">Compare</button>
@@ -67,7 +67,7 @@
 
             <div class="page" id="page3">
                 <div class="main-content" style="height: 95%; text-align: center;">
-                    <button class="left-scroll-buttons" onclick="scrollIt('#page2')">Click Me to Smooth Scroll</button>
+                    <button class="left-scroll-buttons" onclick="scrollIt('#page2')"></button>
                     <div class="radar-container" style="display: inline-block; padding-top: 25px;">
                         <canvas id="radar" style="opacity: 0.7;"></canvas>
                     </div>
@@ -143,6 +143,7 @@ $(document).ready(function(){
             
             // displayMap()
             compare()
+            scrollIt('#page3')
         }
     </script>
     <script>
