--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
                         </div>
                     </div>
                     <div class="categories">
-                        <a class="category">Total Spending: <br/><input id="categoryRange" type="range" min="0" max="100000000000" value="0"><br/>Value: <span id="demo"></span></a>
-                        <a class="category">Per Capita Spending: <br /><input id="categoryRange2" type="range" min="0" max="100000000000" value="0"><br />Value: <span id="demo2"></span></a>
-                        <a class="category">Population: <br /><input id="categoryRange3" type="range" min="0" max="1000000000000" value="0"><br />Value: <span id="demo3"></span></a>
-                        <a class="category">Median Income per Household: <br /><input id="categoryRange4" type="range" min="0" max="100000000000" value="0"><br />Value: <span id="demo4"></span></a>
+                        <a class="category">Total Spending: <span id="demo"></span> <br/><input id="categoryRange" type="range" min="0" max="100000000000" value="0"></a>
+                        <a class="category">Per Capita Spending: <span id="demo2"></span> <br /><input id="categoryRange2" type="range" min="0" max="100000000000" value="0"></a>
+                        <a class="category">Population: <span id="demo3"></span> <br /><input id="categoryRange3" type="range" min="0" max="1000000000000" value="0"></a>
+                        <a class="category">Median Household Income: <span id="demo4"></span> <br /><input id="categoryRange4" type="range" min="0" max="100000000000" value="0"></a>
                     </div>
                     <div class="left-right-container">
                         <div style="width: 100%; text-align: center;">
