--- a/index.html
+++ b/index.html
@@ -16,10 +16,7 @@
         </div>
         <div class="docScroller">
             <div class="page" id="page1">
-                <video class="vid" autoplay loop muted>
-                    <source src="videos/_Eagle.mp4" type="video/mp4">
-                    <source src="https://seedie.s3.amazonaws.com/_Eagle.mp4" type="video/mp4">
-                </video>
+                <div id="background-video"></div>
                 <div class="main-content">
                     <button class="scroll-buttons" onclick="scrollIt('#page2')"></button>
                     <div id="spinner" class="lds-ripple"><div></div><div></div></div>
@@ -84,6 +81,15 @@
     </div>
 
     <meta charset="utf-8">
+
+    <script>
+    window.addEventListener('DOMContentLoaded', (event) => {
+        document.getElementById("background-video").innerHTML =`<video class="vid" autoplay loop muted>
+                                                                    <source src="videos/_Eagle.mp4" type="video/mp4">
+                                                                    <source src="https://seedie.s3.amazonaws.com/_Eagle.mp4" type="video/mp4">
+                                                                </video>`
+    });
+    </script>
     
     <script id="grid" type="text/plain">
                                   ME
