--- a/index.html
+++ b/index.html
@@ -83,12 +83,13 @@
     <meta charset="utf-8">
 
     <script>
-    window.addEventListener('DOMContentLoaded', (event) => {
-        document.getElementById("background-video").innerHTML =`<video class="vid" autoplay loop muted>
-                                                                    <source src="videos/_Eagle.mp4" type="video/mp4">
-                                                                    <source src="https://seedie.s3.amazonaws.com/_Eagle.mp4" type="video/mp4">
-                                                                </video>`
-    });
+        window.addEventListener('DOMContentLoaded', () => {
+            document.getElementById("background-video").innerHTML =
+            `<video class="vid" autoplay loop muted>
+                <source src="videos/_Eagle.mp4" type="video/mp4">
+                <source src="https://seedie.s3.amazonaws.com/_Eagle.mp4" type="video/mp4">
+            </video>`
+        });
     </script>
     
     <script id="grid" type="text/plain">
