--- a/index.html
+++ b/index.html
@@ -211,6 +211,16 @@
             d3.select("radar").transition().style("-webkit-animation", "chartjs-render-animation 0.001s;")
         } -->
     </script>
+
+    <script>
+        window.addEventListener('DOMContentLoaded', () => {
+            document.getElementById("background-video").innerHTML =
+            `<video class="vid" autoplay loop muted>
+                    <source src="videos/_Eagle.mp4" type="video/mp4">
+                    <source src="https://seedie.s3.amazonaws.com/_Eagle.mp4" type="video/mp4">
+            </video>`
+        });
+    </script>
 </body>
 
 </html>
