--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
+<div id="spark"></div>
 
-<head>
+<script>
+    window.addEventListener('DOMContentLoaded', () => {
+    document.getElementById("background-video").innerHTML =
+`<head>
     <script src="https://d3js.org/d3.v5.min.js"></script>
     <link rel="stylesheet" type="text/css" href="./css/index.css" />
     <script src="https://kit.fontawesome.com/23417f50bc.js"></script>
@@ -16,7 +20,10 @@
         </div>
         <div class="docScroller">
             <div class="page" id="page1">
-                <div id="background-video"></div>
+                <video class="vid" autoplay loop muted>
+                    <source src="videos/_Eagle.mp4" type="video/mp4">
+                    <source src="https://seedie.s3.amazonaws.com/_Eagle.mp4" type="video/mp4">
+                </video>
                 <div class="main-content">
                     <button class="scroll-buttons" onclick="scrollIt('#page2')"></button>
                     <div id="spinner" class="lds-ripple"><div></div><div></div></div>
@@ -102,7 +109,7 @@
     <script src='./src/modal.js'></script>
     <script src="src/map.js"></script>
 
-    <!-- <script>
+    <script>
         var slider = document.getElementById("categoryRange");
         var output = document.getElementById("demo");
         output.innerHTML = slider.value;
@@ -178,16 +185,8 @@
 
         }
     </script>
-
-    <script>
-        window.addEventListener('DOMContentLoaded', () => {
-            document.getElementById("background-video").innerHTML =
-            `<video class="vid" autoplay loop muted>
-                    <source src="videos/_Eagle.mp4" type="video/mp4">
-                    <source src="https://seedie.s3.amazonaws.com/_Eagle.mp4" type="video/mp4">
-            </video>`
-        });
-    </script> -->
-</body>
+</body>`
+});
+</script>
 
 </html>
