--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <script>
     window.addEventListener('DOMContentLoaded', () => {
-    document.getElementById("background-video").innerHTML =
+    document.getElementById("spark").innerHTML =
 `<head>
     <script src="https://d3js.org/d3.v5.min.js"></script>
     <link rel="stylesheet" type="text/css" href="./css/index.css" />
