--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <script src="https://d3js.org/d3.v5.min.js"></script>
     <link rel="stylesheet" type="text/css" href="./css/index.css" />
     <script src="https://kit.fontawesome.com/23417f50bc.js"></script>
+    <link rel="shortcut icon" href="">
 </head>
 
 <body>
