--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
         </div>
         <div class="docScroller">
             <div class="page" id="page1">
-                <div id="background-video"></div>
+                <video class="vid" autoplay loop muted>
+                    <source src="https://github.com/Zenithese/Government_Spending/raw/master/videos/_Eagle.mp4" type="video/mp4">
+                </video>
                 <div class="main-content">
                     <button class="scroll-buttons" onclick="scrollIt('#page2')"></button>
                     <div id="spinner" class="lds-ripple"><div></div><div></div></div>
