Modal and draggable toggle

--- a/index.html
+++ b/index.html
@@ -54,7 +54,9 @@
                     <button class="left-scroll-buttons" onclick="scrollIt('#page1')"></button>
                     <button id="scrollTo3" class="scroll-buttons" onclick="scrollIt('#page3')" style="display: none;"></button>
                     <div class="radar-container">
+                        
                         <div id="radar-controls">
+                            <div id="radar-controls-header">&#x2191;<br/>Freedom<br/>&#x2190;  of  &#x2192;<br/>Movement<br/>&#x2193;</div>
                             <label class="switch"><input onclick="floorOrCeiling()" type="checkbox"><span class="slider"></span></label>
                         </div>
                     </div>
