Add diagonal arrows

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                     <div class="left-right-container">
                         <div style="width: 100%; text-align: center;">
                             <div style="margin-top: 8vh;"></div>
-                            <div id="d3"><div id="d3-header">&#x2191;<br/>&#x2190;&nbsp;&#x2192;<br/>&#x2193;</div><svg id="d3-block-map" style="opacity: 0.7; margin: 0; position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);" width="960" height="550"></svg></div>
+                            <div id="d3"><div id="d3-header">&#8598;&#x2191;&#8599;<br/>&#x2190;&nbsp;&#x2192;<br/>&#8601;&#x2193;&#8600;</div><svg id="d3-block-map" style="opacity: 0.7; margin: 0; position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);" width="960" height="550"></svg></div>
                         </div>
                     </div>
                 </div>
