--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                                             <a onclick="selectFiscalYear('2017')">2017</a>
                                         </div>
                                     </div>
-                                    <button class="button" onclick="freedom()"><span style="color:red;">U</span><span class="following" style="padding-right: 1px;">nited</span><span style="color:white">S</span><span class="following">tates</span><span class="of">of </span><span style="color:blue">A</span><span class="following" style="letter-spacing: -.43em; padding-left: 1px;">merica</span></button>
+                                    <!-- <button class="button" onclick="freedom()"><span style="color:red;">U</span><span class="following" style="padding-right: 1px;">nited</span><span style="color:white">S</span><span class="following">tates</span><span class="of">of </span><span style="color:blue">A</span><span class="following" style="letter-spacing: -.43em; padding-left: 1px;">merica</span></button> -->
                                 </div>
                                 <div id="left-middle" class="left-middle"></div>
                             </div>
