changed the footer

--- a/index.html
+++ b/index.html
@@ -78,9 +78,7 @@
                 
             </div>
             </div>
-            <div class="footer">I'm one
-                        loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooog
-                        footer :)</div>
+            <div class="footer">knowledge is power / power corrupts / study hard / be evil (a lesson in heartless logic)</div>
         </div>
     </div>
 
