--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@
     <script src="//d3js.org/d3.v3.min.js"></script>
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.3/Chart.min.js"></script>
+    <script src="./src/data.js"></script>
     <script src='./src/index.js'></script>
 
     <script src='./src/another.js'></script>
