--- a/index.html
+++ b/index.html
@@ -114,7 +114,8 @@
                 
             </div>
             </div>
-            <div class="footer">knowledge is power / power corrupts / study hard / be evil (a lesson in heartless logic)</div>
+            <!-- <div class="footer">knowledge is power / power corrupts / study hard / be evil (a lesson in heartless logic)</div> -->
+            <div class="footer">Call your Congressperson</div>
         </div>
     </div>
 
